--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>hlw</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas commodi aliquam praesentium omnis, itaque vel voluptate perspiciatis excepturi vitae, temporibus eius quod nobis repellat. Voluptates consequuntur non dignissimos ut, modi magni quasi beatae repellendus eos quia maxime, dolorum saepe doloremque eius. Maiores reiciendis inventore corrupti.</p>
 </body>
 </html>
